--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@
 
     <!-- ------------------------------------ WEEK 7 ---------------------------------------------- -->
 
-    <details class="week" id="break-week">
+    <details class="week" id="week-7">
       <summary>Week 7</summary>
       <div class="week-content">
         <h3>Reflection</h3>
@@ -1329,6 +1329,46 @@
           other projects.
           <br />
           <br />
+          From last week I started to make the ambience for The Hollow Child. I
+          was having a bit of trouble because I was meant to create a forest
+          soundscape, but empty, so no animal sounds, no rain, etc. I decided to
+          just add wind, and also wind chimes to create a musical and creepy
+          sound effect, which the animator liked! I used automation and EQ and
+          pitch shifting to make the chimes less predictable and different each
+          time it plays.
+          <br />
+          <br />
+          I added a lot of drones to add this feeling of dread when the werewolf
+          looks around, especially when he is hearing the laughs in the distance
+          , but hasn't seen the girl yet. I tend to go towards the deeper and
+          lower sounds because I know that Maria is going higher for the music
+          effects, and I want don't want to muddle her sounds. I did the same
+          droning and impact when the werewolf sees the dead animals, and he
+          starts to realize who and what the ghost is.
+          <br />
+          <br />
+          When the girl gives the werewolf a gift of the dead rabbit, I thought
+          it would be cool to echo the laughs to create a creepy atmosphere. I
+          was also thinking of doing a high pitched sound, like the effect of
+          when you hit your head, but I decided to see what Maria does for the
+          music, and if it will be too much if I add it in. Instead, I did a
+          heartbeat, but I also wasn't sure if the werewolf guy would even have
+          a heartbeat, so I need to double check with the animator.
+          <br />
+          <br />
+          For the end sequence, it is very music heavy so I just added a
+          placeholder song for now while I wait for Maria's track. I tried to
+          make it very sparkly and big, but I do think it needs more, but I
+          think I will experiment around with it once I have the song.
+          <br />
+          <br />
+          So overall, I just basically added all of the diegetic and
+          non-diegetic sound, not including the music. In the coming weeks I aim
+          to do the automation and refinements as the animator sends in more of
+          the finished parts, so I can properly line up the sounds.
+          <br />
+          <br />
+
           I also started to do work on Fired Before Hired, the game I am doing
           the sound design for. I started with doing the menu music! I gave the
           main game designer a few different clips of different videos to see
@@ -1424,6 +1464,105 @@
           <br />
           <img src="photos/week7/3.png" alt="" />
         </p>
+      </div>
+    </details>
+
+    <!-- ------------------------------------ WEEK 8 ---------------------------------------------- -->
+
+    <details class="week" id="week-8">
+      <summary>Week 8</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>...</p>
+        <h3>Academic Research</h3>
+        <p>...</p>
+        <h3>Artistic Research</h3>
+        <p>...</p>
+        <h3>Technical Research</h3>
+        <p>...</p>
+        <h3>Progress Report</h3>
+        <p>...</p>
+      </div>
+    </details>
+
+    <!-- ------------------------------------ WEEK 9 ---------------------------------------------- -->
+
+    <details class="week" id="week-9">
+      <summary>Week 9</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>...</p>
+        <h3>Academic Research</h3>
+        <p>...</p>
+        <h3>Artistic Research</h3>
+        <p>...</p>
+        <h3>Technical Research</h3>
+        <p>...</p>
+        <h3>Progress Report</h3>
+        <p>
+          This week, I started creating the wave music for Fired Before Hired.
+          This was difficult at first because it was meant to go up in intensity
+          as the players finished each wave, but obviously everyone is not going
+          to finish the same wave at the exact same time, so I had to figure out
+          a way to make sure the music doesn't suddenly stop and start in a
+          different place, and to keep the immersion of the player. I was
+          talking to Santino and he gave me the idea to make sure everything was
+          a loop. After that I could export each one as a wav file, and then
+          mute and unmute the tracks as needed with coding in Unity, which I
+          thought was a great idea!
+          <br />
+          <br />
+          I began searched for different loops and samples on Splice to see what
+          I could use as my base, and build it up from there. The game designer
+          mentioned that it would be funny if the wave music was super serious
+          and orchestral and big, because it severely contrasts the visuals.
+          Since the game was satirical and comedic, I thought it fit the vibe
+          and decided to go towards that direction, and found this super cool
+          strings to use as a starting point. I duplicated that 10 times so I
+          could have a visual layout of what happens at each stage, the final
+          product will just all be one loop stacked on top of each other
+          <br />
+          <br />
+          I then went to find some shakers for a lighter percussion that I
+          thought could be used at the start, which will change to a bigger one
+          when the player gets into the more intense levels.
+          <br />
+          <br />
+          I also recorded a cello playing the bass note and letting it ring out
+          basically the entire song. I wanted to have each part pretty simple
+          because I knew that by the end, if I made each part too complex it
+          would definitely be too busy, and take away from what I wanted. I then
+          also added a melody and counter melody (stuff that I learned when
+          doing Gina Moore's Shelves!) with a violin, which I changed to piccolo
+          later on!
+          <br />
+          <br />
+          I thought it would be cool to add like a DUN DUN (I don't know how
+          else to describe it) to help build up anticipation and build tension.
+          ALongside that I added another cello to add a lower bass that wasn't
+          just playing the root note the entire time.
+          <br />
+          <br />
+          At this time
+        </p>
+      </div>
+    </details>
+
+    <!-- ------------------------------------ WEEK 10 ---------------------------------------------- -->
+
+    <details class="week" id="week-10">
+      <summary>Week 10</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>...</p>
+        <h3>Academic Research</h3>
+        <p>...</p>
+        <h3>Artistic Research</h3>
+        <p>...</p>
+        <h3>Technical Research</h3>
+        <p>...</p>
+        <h3>Progress Report</h3>
+        <p>...</p>
       </div>
     </details>
 
