--- a/index.html
+++ b/index.html
@@ -1481,24 +1481,6 @@
         <h3>Technical Research</h3>
         <p>...</p>
         <h3>Progress Report</h3>
-        <p>...</p>
-      </div>
-    </details>
-
-    <!-- ------------------------------------ WEEK 9 ---------------------------------------------- -->
-
-    <details class="week" id="week-9">
-      <summary>Week 9</summary>
-      <div class="week-content">
-        <h3>Reflection</h3>
-        <p>...</p>
-        <h3>Academic Research</h3>
-        <p>...</p>
-        <h3>Artistic Research</h3>
-        <p>...</p>
-        <h3>Technical Research</h3>
-        <p>...</p>
-        <h3>Progress Report</h3>
         <p>
           This week, I started creating the wave music for Fired Before Hired.
           This was difficult at first because it was meant to go up in intensity
@@ -1523,6 +1505,9 @@
           product will just all be one loop stacked on top of each other
           <br />
           <br />
+          <img src="photos/week8/8.1.png" alt="" />
+          <br />
+          <br />
           I then went to find some shakers for a lighter percussion that I
           thought could be used at the start, which will change to a bigger one
           when the player gets into the more intense levels.
@@ -1537,14 +1522,82 @@
           later on!
           <br />
           <br />
+          <img src="photos/week8/8.3.png" alt="" />
+          <br />
+          <br />
           I thought it would be cool to add like a DUN DUN (I don't know how
           else to describe it) to help build up anticipation and build tension.
           ALongside that I added another cello to add a lower bass that wasn't
           just playing the root note the entire time.
           <br />
           <br />
-          At this time
+          <img src="photos/week8/8.2.png" alt="" />
+          <br />
+          <br />
+          At this time I also decided to add the more intense drums, I found
+          different percussion samples that I thought fit the vibe I was going
+          for, and also had varying levels of intensity, so I used that to help
+          build up the intensity for each wave. This worked exptremely well and
+          I don't think that the final product would have been as intense if I
+          didn't decide to do this.
+          <br />
+          <br />
+          <img src="photos/week8/8.4.png" alt="" />
+          <br />
+          <br />
+          From this it was just a matter of finding smaller things to add for
+          each section. This ranged from finding different horns with varying
+          intensities, and I even found another violin sample with a cool
+          melody, and layered that on top of the exisiting one. I even added
+          some piano in there that added more rhythm to the entire sound.
+          <br />
+          <br />
+          <img src="photos/week8/8.5.png" alt="" />
+          <br />
+          <br />
+          And that was basically done! I sent it off to the game designer for
+          some feedback and am waiting to hear from him regarding that. Each
+          section didn't have to be very long since when I was playing the game,
+          I pretty much only spent around 10 seconds in each wave, but I also
+          have a lot of experience playing FPS games and such, so I had to keep
+          in mind that other people may spend longer.
+          <br />
+          <br />
+          Other than working on this wave music, I also started to refine The
+          Hollow Child, because the animator reached out with more finished
+          parts of the animation. All the work I did last week was all on top of
+          the draft, and I let the finished animations build up a bit more
+          before I started to refine, so I had a lot to catch up on! ALthough
+          this basically just consisted of making sure all the timing matched up
+          to the actual animation instead of the draft. I didn't add any new
+          sound, just moved things around in the timeline and did some
+          automation and a tiny bit of FX editing, but not that much.
+          <br />
+          <br />
+          I don't want to do much more refining work on The Hollow Child until
+          Maria sends through the music part, so I know how much I should do for
+          foley, as I think there are a few parts I know I'll have to cut out
+          because Maria is making the music kind of like ambience for some
+          parts.
         </p>
+      </div>
+    </details>
+
+    <!-- ------------------------------------ WEEK 9 ---------------------------------------------- -->
+
+    <details class="week" id="week-9">
+      <summary>Week 9</summary>
+      <div class="week-content">
+        <h3>Reflection</h3>
+        <p>...</p>
+        <h3>Academic Research</h3>
+        <p>...</p>
+        <h3>Artistic Research</h3>
+        <p>...</p>
+        <h3>Technical Research</h3>
+        <p>...</p>
+        <h3>Progress Report</h3>
+        <p>...</p>
       </div>
     </details>
 
