--- a/index.html
+++ b/index.html
@@ -1510,7 +1510,11 @@
           the finished parts, so I can properly line up the sounds.
           <br />
           <br />
-          You can watch it here: INSERTLINK
+          You can watch it here:
+          <a
+            href="https://www.youtube.com/watch?v=JH6n9ncHDc8&list=PLvt9uDYuOQg7i28uXG7PKJC8Hk7bAglt2&index=4"
+            >https://www.youtube.com/watch?v=JH6n9ncHDc8&list=PLvt9uDYuOQg7i28uXG7PKJC8Hk7bAglt2&index=4</a
+          >
           <br />
           <br />
           I also started to do work on Fired Before Hired, the game I am doing
@@ -1609,7 +1613,10 @@
           <img src="photos/week7/3.png" alt="" />
           <br />
           <br />
-          You can listen to it here: INSERTLINK
+          You can listen to it here:
+          <a href="https://youtu.be/SjpkX_O2ez0"
+            >https://youtu.be/SjpkX_O2ez0</a
+          >
         </p>
       </div>
     </details>
@@ -1820,7 +1827,10 @@
           in mind that other people may spend longer.
           <br />
           <br />
-          You can watch the full thing here: INSERTLINK
+          You can watch the full thing here:
+          <a href="https://youtu.be/zWbvsTAuDr0"
+            >https://youtu.be/zWbvsTAuDr0</a
+          >
           <br />
           <br />
           Other than working on this wave music, I also started to refine The
@@ -1892,7 +1902,10 @@
           <br />
           That is just the general ambience of the vibe I wanted to go for, I
           really am just waiting for the narration, as I mentioned in the
-          progress presentation! You can watch it here: INSERTLINK
+          progress presentation! You can watch it here:
+          <a href="https://youtu.be/IUlOBy_d0Tg"
+            >https://youtu.be/IUlOBy_d0Tg</a
+          >
         </p>
       </div>
     </details>
@@ -2376,7 +2389,10 @@
           <img src="photos/week10/10.4.png" alt="" />
           <br />
           <br />
-          You can watch the full (new) draft here: INSERTLINK
+          You can watch the full (new) draft here:
+          <a href="https://youtu.be/wsZlbXjXo5k"
+            >https://youtu.be/wsZlbXjXo5k</a
+          >
           <br />
           <br />
           I also recorded the rest of the things I needed for the Fired Before
