--- a/index.html
+++ b/index.html
@@ -2151,7 +2151,10 @@
           week I plan to add the non-diegetic sound and the ambiences!
           <br />
           <br />
-          You can watch it here: INSERTLINK
+          You can watch it here:
+          <a href="https://youtu.be/5wcFfg43Ghk"
+            >https://youtu.be/5wcFfg43Ghk</a
+          >
           <br />
           <br />
           Other than working on The Disconnect, I also started to make the
