--- a/index.html
+++ b/index.html
@@ -2445,6 +2445,202 @@
   </body>
 </html>
 
+
+<!-- ------------------------------------ WEEK 11 ---------------------------------------------- -->
+
+<details class="week" id="week-11">
+    <summary>Week 11</summary>
+    <div class="week-content">
+      <h3>Academic Research</h3>
+      <p>
+        This week I revisted John-Steiner's ideas on Collaboration from his article 
+        about Creative Collaborations. He describes creativity as something that grows 
+        through dialogue and also shared experiences. I think this specifically was 
+        something that I always kept in mind when working with the animators and the game 
+        designers I was working with. Keeping the open line of communication and sending 
+        them the updated versions of my work helped me keep their vision alive, and also 
+        put less stress for doing last minute refinements at the end. I also applied this 
+        while working with Maria, as we often went back and forth refining the ideas until 
+        the music, foley and ambience felt like a cohesive whole. The article just solidifies 
+        and adds to what I already believed about collaborative projects. It's not just about 
+        agreeing to whatever hte other person says, but also finding the right balance 
+        between staying open to compromise, and getting your own ideas across.
+        <br>
+        <br>
+        I also looked into Juslins research on emotional responses to sound and music, 
+        which basically breaks down how certain frequencies, tempos and timres affect's 
+        mood. This was something I already could tell just from critical thinking alone, 
+        but having that academic reinforcement helped. I think alongside my other research 
+        especially with EQ carving, I was able to carve out certain frequencies to get that 
+        mood that Juslin is talking about. I was also more critical about my layers of 
+        ambience, taking particular care into seeing which EQ's were muddy, and whether 
+        the layer was adding to the piece or taking away. Suprisingly, a lot of layers I 
+        decided were actually adding not particular benefit. This helped me refine my 
+        mixes more intentionally, to try to catch that timbre and frequencies that are 
+        associated with the mood I want.
+        <br>
+        <br>
+        I also read through Donald Schon's reflective practionier concept, which is 
+        basically about learning through doing and making. I thought this perfectly 
+        described this stage of these projects to me, since I really felt like I 
+        was learning as I go. No matter how much academic research or artistic 
+        research I undertake, I always learn better while doing. Since a lot of my 
+        refinements weren't really planned, it came from using my own ears, adjusting 
+        and reflecting. Every small change that I made, I tried to ask myself, why am I 
+        doing this? What does it achieve? I think Schon's article really helped solidify 
+        that mindset in me and that refining isn't just polishing the project, but also 
+        polishing my creative thinking process skills.
+      </p>
+      <h3>Artistic Research</h3>
+      <p>
+        This week I looked into some composers that make some cool japanese films, and 
+        saw Ryuichi Sakamoto, because of his work in Monster. His film scores feel so 
+        delicate but also full of texture and can really create the environments well. He 
+        often mixes environmental sounds and instruments (like a lot of the composers that 
+        I am a fan of, I think I have a type!) and that he perfectly captures big emotions 
+        without being obvious, which is important in genres like thrillers. When I was 
+        refining all my projects, I tried to think of that balance, specifically in The 
+        Hollow Child, when mixing the music with the ambience I created. Maybe in the future 
+        as a project, I would like to record my own ambient layers, and try to use them 
+        like instruments instead of effects, and see how well that works!
+      </p>
+      <h3>Technical Research</h3>
+      <p>
+        I also watched Joker, and I noticed that the sound designer uses a lot of minimal 
+        drones that slowly get larger and evolve as the scene progresses. The sounds felt 
+        like they were coming from the environment themselves, rather than just something 
+        added in post production if that makes sense. Subtle movement is something I want 
+        to explore more in future projects, I only really did a bit of it for these projects 
+        but things like doing EQ animation and reverb to make soundscapes breathe and move 
+        is something I want to practice on, since I'm not fully confident in my skills in 
+        that area. Watching Joker basically taught me that istead of adding more layers to create 
+        more tension, I could make my existing ones evolve over time.
+      </p>
+      <h3>Progress Report</h3>
+      <p>
+        This week I did a lot of work on The Hollow Child! Maria sent through her music 
+        so I was finally able to start some mixing and refinements based on her music. 
+        The first thing that I worked on was getting the timing right. There were a few changes 
+        from the animation, but the animator promised that she wouldn't change the 
+        timing anymore, she just needs to finish the final drawings and will put it on 
+        top. Since the timing changed, I spent quite a lot of time getting all the existing 
+        sounds correct, It was quite annoying to be honest because a lot of it was like just 
+        a few seconds off, and I had a lot of layers. Anyways you can see it here:
+
+        <img src="photos/week11/11.1.png" alt="">
+
+        After that, I worked on getting Maria's music to not peak, and be more dynamic. I did 
+        this by adding a compressor to make the louder sounds a bit quieter, and the quieter 
+        sounds a bit louder. I also used some automation to get exactly what I wanted in terms 
+        of sound dynamics and such, to try and keep the essence of what Maria wanted to be quiet, 
+        and what she wanted to be loud. I only really did this because the music was way too low 
+        compared to the ambience, and was getting pretty drowned out and I wanted to make sure 
+        that Maria's hard work could be heard. You can see the automation here:
+
+        <img src="photos/week11/11.3.png" alt="">
+
+        I then started to work on some cool panning effects! I thought it'd be cool to have the ghost 
+        pan around the headphones, as if the listner was the werewolf, and was hearing these creepy 
+        laughs all around him, not knowing what it is! I wanted to try and capture that eerie creepy 
+        feeling of someone being close to your ear, and moving around. I did this for all the ghost 
+        laughs, the wooshes and the humming!  
+
+        <img src="photos/week11/11.2.png" alt="">
+        <img src="photos/week11/11.4.png" alt="">
+
+        I then added this long sample of wind that I found online, as one of the feedback was that 
+        the wind felt placed on, rather than in the environment. I also got another sample of a creepier 
+        forest, which basically had more reverb and empty space, but also some creepy sounds like creaks. 
+        So when I wanted the forest to feel a bit emptier and creepy, I'd slowly automate it and fade the 
+        sound to change, and change it back when I wanted it back to 'normal'. The normal sounds basically 
+        just consisted of more defined wind, and some rustling. I purposefuly avoided those with animals 
+        like bird's chirping etc, to make sure that the forest didn't feel too alive.
+
+        <img src="photos/week11/11.6.png" alt="">
+
+        From there it was just about tweaking some effects to make sure everything was a bit smoother!
+         I layered a bit more wind sounds when I wanted the atmosphere to be mroe intense, as well as 
+         changed up the jumpscare of the rabbit! I did this because Maria highlighted the rabbit with a 
+         impact on strings, so I added more low drones, and also did my own tension rising and impact to 
+         play alongside her music, so it sounds more like combined as one. I also looked through a lot of 
+         the ambiences I had and was taking note of the different frequencies that they laid at. I removed 
+         a lot of the ones that interfered with them music, so I kept a lot of low end, and a few high end 
+         sounds, with only a very little audio in a mid frequency range, mainly kept to accompany the 
+         music so it didn't feel so alone, if that makes sense!
+
+         <br>
+         <br>
+         That was all I did for The Hollow Child! We actually got the animator to listen to the sounds with 
+         a professional speaker set up, and there we were able to hear a few problem areas. Maria, the animator 
+         and I were all discussing in person what we should do, how we should change it, and just in general how 
+         to make the entire thing align with the animators vision, as well as how we could imrpove on what she 
+         wanted! I will work on the things I got feedback on next week, as the animator also said she has 
+         a few more scenes she is nearly done with, and I can do more of the sound design on top of that! You 
+         can watch the new draft with the music <a href="https://www.youtube.com/watch?v=2jiT6h20BZc">here</a>!
+
+         <br>
+         <br>
+         This week I also worked on The Disconnect! From the draft from last week (which I was pretty happy 
+         about!), Caroline the animator gave me a bit of feedback but was overall really happy about it and 
+         was really just nitpicking (her words) and some parts she thinks could be slightly better!
+         <br>
+         <br>
+        The first thing she mentioned was that the narration felt a bit quiet compared to the sound effects. 
+        I actually completely agreed with this, but the issue was that I already had maxxed out the volume on 
+        the narration she gave me. I mentioned this and she realized that she had made the narration way quieter 
+        in the file that she gave me, as she was editing it in Premiere Pro. She gave me the raw wav file which 
+        I then automated again, to make sure it didn't peak too high. This made a significant difference, I could 
+        really hear the dialogue clearer, and didn't have to make my ambience less bold to make room for the dialogue!
+
+         <img src="photos/week11/11.7.png" alt="">
+
+         The next thing she mentioned was that she wanted the ending to be a bit more powerful. She wants the sound 
+         to build up as she gets closer to the end, as if she was walking closer to danger. I moved around the 
+         different ambiences I had, and played around with EQ and automation to make it get progressively louder 
+         and more chaotic near the end. I also changed up the riser and impact to make it less of a cinematic 
+         sound, and more of a creepy, scary sound! I don't know if I went too ham on the build up, as it was so close 
+         to hitting red on the frequency marker, but Caroline mentioned that she liked what I did so I am happy!
+
+         <img src="photos/week11/11.8.png" alt="">
+
+         The last piece of feedback that she said was that she wanted the audio from the classroom scene to cut off 
+         completely before the next scene. That was an easy fix! But she also wanted the sound of people talking 
+         in the background to be changed to just girls speaking! I found a random sample and just adjusted the EQ 
+         to muffle it up a bit to make it sound like it was coming from the hallway. I also did a bit of automation 
+         to get the levels a bit more together, as there were a lot of peaks in the original recording.
+
+         <img src="photos/week11/11.9.png" alt="">
+
+         Next was just a matter of adding effects to foley! I basically added an EQ, a compressor, then a reverb 
+         to most of the foley, just changed the parameters based on the character and the environment. I tried 
+         to make the antogaonist have lower footsteps, to make them sound more menacing and scary, while the 
+         protagonist would be on the higher side. I adjusted the reverb based on the environment they are in, like 
+         in the cathedral in the first scene the size was pretty big, and the classroom was pretty small in comparison, 
+         with basically no reverb, I also used the compressor to just make sure that everything was around the 
+         same volume, so you could clearly hear it above everything else!
+
+         <img src="photos/week11/11.10.png" alt="">
+
+         After this, I did a LOT of EQ carving. I basically added an EQ Eight on all tracks and checked which frequencies 
+         it was focused on. I added a little boost, and carved out that frequency in the other tracks, if that makes 
+         sense. I wanted to make sure each highlighted aspect of each sound was at the front, and it prevented 
+         a lot of muddiness in other frequency ranges! This was particularly useful when trying to make sure 
+         that the dialogue could be heard, I made sure that the dialogue frequency range was boosted, and was 
+         a bit lower for all the other sound! I think I could have done this a bit better with this, especially 
+         at the end, but thats something for next week I think!
+         <img src="photos/week11/11.11.png" alt="">
+
+         You can watch the updated version <a href="https://youtu.be/KsAbEDjkiRM">here</a>! 
+         <br>
+         <br>
+         And that's all for this week! One more week to go.
+      </p>
+    </div>
+  </details> 
+  </body>
+</html>
+
+
 <!-- ------------------------------------ FUTURE WEEKS TEMPLATE ---------------------------------------------- -->
 
 <!-- <details class="week" id="week-4">
