--- a/index.html
+++ b/index.html
@@ -2862,27 +2862,102 @@
       </p>
     </div>
   </details>
+
+
+
+<!-- ------------------------------------ PRESENTATION---------------------------------------------- -->
+
+<details class="week" id="week-0">
+    <summary> Final Presentation </summary>
+    <div class="week-content">
+      <h1>The Hollow Child - Animation</h1>
+      <h3>Summary</h3>
+      <p>
+        A gothic, dark fantasy short animation about a werewolf finding himself in a forest and encounters a myserious child who appears innocent, but carries 
+        an unsettling presence. Overtime, he realizes that she is the source of death surrounding him. The film explores themes of death, empathy, lonelinness, 
+        innocence and dread.
+      </p>
+      <h3>Goals</h3>
+      <p>
+        I was responsible for the foley, ambience and non-diegetic sound design, with Maria doing the musical score. My goal was to use sound to convey both 
+        the emotional and supernatural layers of the story as well as the making the soundscape feel alive and an extension of the forest itself. I want it to feel 
+        atmpshere heavy and less focused on realism.
+      </p>
+      <h3>Approach</h3>
+      <p>
+        Used Ableton as my DAW and used a combination of self-recorded foley and samples from sound libaries. I applied automation alongside EQ, reverb and other 
+        forms of modulation to make the sounds feel alive and flow through the scenes smoothly. I also experimented with the stereo field to give the illusion of movement, 
+        mainly through the use of panning to create movement, and added subtle motion and quieter moments to heighten suspense at certain parts.
+      </p>
+      <p>
+        Link to most recent draft: <a href="https://rmiteduau-my.sharepoint.com/:v:/g/personal/s4009260_student_rmit_edu_au/EccehwMWsSdEiMR3MDZsgV0BH5-sN-MWsLezEGhGyb5aVw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=zsOLao">The Hollow Child</a>
+      </p>
+      <h1>The Disconnect</h1>
+      <h3>Summary</h3>
+      <p>
+        A horror-thriller short animation that follows a schoolgirl frieving the death of her friend, who becomes convinced that supernatural forces are responsible. 
+        When she visits the crime scene in search of answers, she uncovers evidence, but soon realizes she may have walked into a trap herself. The film explores themes 
+        of identity, loneliness and fear through the lens of the supernatural.
+      </p>
+      <h3>Goals</h3>
+      <p>
+        I was responsible for the entire sound design, besides the music at the end. My goal was to use sound to convey the psychological unease and gradually build tension, 
+        allowing the audience to experience the protagonist's paranoia. Rather than focusing on realism, I focused on atmosphere. Although, it is a very narrative heavy 
+        film, so my goal was to find the perfect blend.
+      </p>
+      <h3>Approach</h3>
+      <p>
+        I combined self recorded Foley with layered drones and environmental textures to create the sound. I wanted to take risks in terms of sound design, layering a lot 
+        of uneasy sounds and slowly building up towards the end as the protagonist gets closer to danger. Feedback helped me refine the pacing and balance of intensity, but I still 
+        do think that I could blend it better before the final version.
+      </p>
+      <p>
+        Link to the most recent draft: <a href="https://rmiteduau-my.sharepoint.com/:v:/g/personal/s4009260_student_rmit_edu_au/EUwCYDnQyxZHqlWWbiuhJagB_nQL19F-wiqt62u35PHNYQ?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=9hb7mB">The Disconnect</a>
+      </p>
+      <h1>Fired Before Hired</h1>
+      <h3>Summary</h3>
+      <p>
+        A satirical, office-themed action game where players defend themselves against an endless wave of job recruiters. Uses hack and slash mechanics and its tone balances 
+        action and parody exploring themes of absurdism through exaggerated sound and design.
+      </p>
+      <h3>Goals</h3>
+      <p>
+        I was responsible for all espects of sound design, including menu music, wave-based combat music, UI sounds and in-game foley. My main goal was to make the sound 
+        both humorous and satisfying to support the fast paced combat and game's comedic tone.I wanted the combat music to intentionally feel to serious to contrast the 
+        less-serious visuals and sound effects, while still keeping the sound effects feel mostly realistic. Enhancing the satire through contrast.
+      </p>
+      <h3>Approach</h3>
+      <p>
+        Created a lot of scripts for each aspect, but I'll talk about them briefly. The menu music plays the clip of the music, and with a user-inserted time stamp, will loop starting there once the clip 
+        finishes, creating an endless looping menu music. For the wave-based music, I made loopable sections, and used to code to mute/unmute certain layers when each wave starts. 
+        For the UI, I just wrote a script listening for a hover/click state and played the sounds accordingly. 
+        For the sound effects, there are 2 kinds. The first one comes from the player, this includes sword slashes, footsteps, etc. The other type is enemy sounds which are scripted so that the sounds play 
+        from the spawned enemies, giving the sense of distance and direction. To avoid repitition, I created a script that holds different sound clips in an array (for example, footsteps). It chooses one at 
+        random, and then chooses a random pitch and volume to play it at within a range. Some sounds are made up of two arrays. An example is for the sword slash, it uses the sounds from the array for the air wooshes/swings 
+        as well as the metallic shing sound, making sure each one still randomizes as well.
+      </p>
+      <p>
+        Link to the game: <a href="https://sekrets.itch.io/fired-before-hired">Fired Before Hired</a>
+      </p>
+      <h1>Self Assessment</h1>
+      <p>
+        This semester I developed a much deeper understanding that for sound, it is both equally important to have the technical skill, but also to use it an expressive and meaningful way. 
+        each project challenged a different part of my skill set. The Hollow Child strengthened my ability to create and mix foley and music together to create a cohesive whole, as well as 
+        building emotion through atmosphere. The Disconnect helped me gain new skills in narrative dialogue, and mixing with that focus in mind, as well as improving on my psychological sound design. 
+        Fired Before Hired helped me implement audio systems in Unity, as well as thinking about sound inside interactive media. Through these works, I have becme more confident in my recording, editing, 
+        layering and atmospheric sound, but also thinking conceptually on why I like certain sounds, and the effects different sounds can have. I also have gained valuable experience with iterative processes, 
+        and ensuring that I get feedback as much as I can to create a design that fits the client's vision. 
+        <br>
+        <br>
+        I think to improve I would like to refine my mixing and mastering workflow, I feel like that is what is most lacking in all my projects, which gets highlighted when the sound 
+        gets played from other forms of playback devices that aren't my headphones. I also wish that I took on some roles for musical composition and scoring, as I want to become more confident 
+        in that aspect, so that in the future I can handle both design and musical elements seamlessly. I want to further work on my time management and communication during collaboration, as even though 
+        I kept an open line of communication, I think I could have asked better questions in order to fully see what my client wanted from the sound.
+        <br>
+        <br>
+        Overall, I am proud of my work this semester and have learnt a lot in this class and helped me realize a lot of places where I want to improve on!
+      </p>
+    </div>
+  </details>
 </body>
 </html>
-
-
-
-<!-- ------------------------------------ FUTURE WEEKS TEMPLATE ---------------------------------------------- -->
-
-<!-- <details class="week" id="week-4">
-    <summary>Week </summary>
-    <div class="week-content">
-      <h3>Reflection</h3>
-      <p>...</p>
-      <h3>Academic Research</h3>
-      <p>...</p>
-      <h3>Artistic Research</h3>
-      <p>...</p>
-      <h3>Technical Research</h3>
-      <p>...</p>
-      <h3>Progress Report</h3>
-      <p>...</p>
-    </div>
-  </details> -->
-<!-- </body>
-</html> -->
